fix(ui5-tab): semantic icon is properly aligned in high contrast themes
fixes: #10455

--- a/packages/main/src/themes/TabInOverflow.css
+++ b/packages/main/src/themes/TabInOverflow.css
@@ -14,11 +14,6 @@
 	display: none;
 }
 
-.ui5-tab-semantic-icon {
-	position: absolute;
-	inset-inline-start: -0.25rem;
-}
-
 .ui5-tab-overflow-item--positive:not(.ui5-tab-overflow-item--disabled) .ui5-tab-overflow-itemContent {
 	color: var(--_ui5_tc_overflowItem_positive_color);
 }
